--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -24,12 +24,19 @@
         <action
             android:id="@+id/action_loginFragment_to_homeActivity"
             app:destination="@id/homeActivity" />
+        <action
+            android:id="@+id/action_loginFragment_to_loginSignUpInfoFragment"
+            app:destination="@id/loginSignUpInfoFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginSignUpFragment"
         android:name="com.mobile.pytournaments.ui.fragment.login.LoginSignUpFragment"
         android:label="fragment_login_sign_up"
-        tools:layout="@layout/fragment_login_sign_up" />
+        tools:layout="@layout/fragment_login_sign_up" >
+        <action
+            android:id="@+id/action_loginSignUpFragment_to_loginSignUpInfoFragment"
+            app:destination="@id/loginSignUpInfoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/splashScreenFragment"
         android:name="com.mobile.pytournaments.ui.fragment.onboarding.SplashScreenFragment"
@@ -51,4 +58,12 @@
         android:name="com.mobile.pytournaments.ui.activity.HomeActivity"
         android:label="activity_home"
         tools:layout="@layout/activity_home" />
+    <fragment
+        android:id="@+id/loginSignUpInfoFragment"
+        android:name="com.mobile.pytournaments.ui.fragment.login.LoginSignUpInfoFragment"
+        android:label="LoginSignUpInfoFragment" >
+        <action
+            android:id="@+id/action_loginSignUpInfoFragment_to_homeActivity"
+            app:destination="@id/homeActivity" />
+    </fragment>
 </navigation>
